<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="split">/</string>
    <string name="multiply">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="min">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="rav">=</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="Setting">S</string>
    <string name="Back">Назад</string>
</resources>